src/test/deca/context/valid/created/sans_objet/operateur_arith_1.deca
// Description:
//    Programme minimaliste utilisant operateur arith.
//
// Resultats:
//  
//
// Historique:
//    cree le 13/01/2024

{
        float a = 1.23;
        int b = 1;
        float x= a + b ;
}