src/test/deca/context/invalid/created/sans_objet/double_def.deca
// Description:
//    Double definition
//
// Resultats:
//    Ligne 13: double definition de variable;
// 
// Historique:
//    cree le 01/01/2024

{
   int a;
   // Doit etre refusé.
   int a;
 
}
